updated on the base template

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -17,7 +17,7 @@
 <div th:fragment="nav">
 
     <nav class="navbar navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand text-white" href="/">Flight Reservation Demo</a>
+        <a class="navbar-brand text-white" href="/">Scorpio Flight Reservation </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
