Updated html added name

--- a/src/main/resources/templates/bookingform.html
+++ b/src/main/resources/templates/bookingform.html
@@ -10,7 +10,7 @@
 	<div th:replace="base :: nav"></div>
 
 	<div class="container bg-light">
-		<h2>Flight Reservation Form</h2>
+		<h2>Scorpio Flight Reservation Form</h2>
 
 	</div>
 
