--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -11,7 +11,7 @@
 	<div th:replace="base :: nav"></div>
 
 	<div class="container">
-		<h1 class="text-center">Welcome to Flights Reservation Demo!</h1>
+		<h1 class="text-center">Welcome to Scorpio Flights Reservation!</h1>
 	</div>
 
 	<div class="container">
