--- a/src/main/resources/templates/bookingform.html
+++ b/src/main/resources/templates/bookingform.html
@@ -25,7 +25,7 @@
 		<br />
 	</div>
 	<div class="form-group" th:if=${null!=toFlight}>
-		<img src="@{/image/image2.jpg}"><strong>Flight-2 </strong><br />
+		<strong>Flight-2 </strong><br />
 		<strong>Departure From: </strong> <span
 			th:text="${toFlight.from.name}"></span><br />
 		<strong>Arrival To: </strong><span th:text="${toFlight.to.name}"></span><br />
