--- a/src/main/resources/templates/reservations.html
+++ b/src/main/resources/templates/reservations.html
@@ -9,12 +9,8 @@
 
 <div th:replace="base :: nav"></div>
 
-<div class="container">
-    <h1 class="text-center">Welcome to Flights Reservation Demo!</h1>
-</div>
-
-<div class="container">
-    <h1> To see the history of a single user </h1>
+<div class="text-center text-white">
+    <h1 >Welcome to Scorpio Flights Reservation !</h1>
 </div>
 
 
@@ -24,10 +20,10 @@
 
 
 <div class="container">
-    <h3 class="text-center py-3 pl-4 pr-5">  Reservations</h3>
+    <h3 class="text-center py-3 pl-4 pr-5">  Reserved Flights </h3>
 
     <div align="center">
-        <table class="table table-hover">
+        <table class="table table-borderless table-hover shadow mb-4 bg-white">
             <thead>
             <tr>
                 <th scope="col"></th>
