--- a/src/main/resources/templates/allflights.html
+++ b/src/main/resources/templates/allflights.html
@@ -16,7 +16,7 @@
 <div class="container">
 
     <h3 class="text-center py-3 pl-4 pr-5">All Flights</h3>
-
+<div class="jumbotron">
     <div align="center">
         <table class="table table-hover">
             <thead>
@@ -28,7 +28,6 @@
                 <th scope="col">Dep. Date</th>
                 <th scope="col">Arr. Date</th>
                 <th scope="col">Aircraft</th>
-                <th scope="col">Action</th>
             </tr>
             </thead>
             <tbody>
@@ -42,15 +41,16 @@
                 <td th:text="${flight.aircraft}"></td>
 
 
-                <td>
-                    <a th:href="@{/delete/{id}(id=${flight.id})}" sec:authorize="hasAuthority('ADMIN')" class="btn btn-danger" role="button">Cancel</a>
-                </td>
+                <!--<td>-->
+                    <!--<a th:href="@{/delete/{id}(id=${flight.id})}" sec:authorize="hasAuthority('ADMIN')" class="btn btn-danger" role="button">Cancel</a>-->
+                <!--</td>-->
 
 
             </tr>
             </tbody>
         </table>
     </div>
+</div>
 
 </div>
 
