--- a/src/main/resources/templates/addFlight.html
+++ b/src/main/resources/templates/addFlight.html
@@ -86,12 +86,12 @@
 
             <div>
                 Departure date: &nbsp;
-                <input type="date" th:field="${flight.departure}" name="departure">
+                <input type="time" th:field="${flight.departure}" name="departure">
             </div>
             <br/>
             <div>
                 Return date: &nbsp;
-                <input type="date" th:field="${flight.arrival}" name="arrival">
+                <input type="time" th:field="${flight.arrival}" name="arrival">
             </div>
             <br/>
 
