--- a/src/main/resources/templates/allflights.html
+++ b/src/main/resources/templates/allflights.html
@@ -19,8 +19,8 @@
                 <th scope="col"></th>
                 <th scope="col">From</th>
                 <th scope="col">To</th>
-                <th scope="col">Dep. Date</th>
-                <th scope="col">Arr. Date</th>
+                <th scope="col">Dep. Time</th>
+                <th scope="col">Arr. Time</th>
                 <th scope="col">Aircraft</th>
             </tr>
             </thead>
