--- a/src/main/resources/templates/reservations.html
+++ b/src/main/resources/templates/reservations.html
@@ -9,18 +9,14 @@
 
 <div th:replace="base :: nav"></div>
 
-<div class="text-center text-white">
-    <h1 >Welcome to Scorpio Flights Reservation !</h1>
-</div>
-
 
 <div th:if="${param.logout}" class="alert alert-info" role="alert">
     You have been logged out
 </div>
 
-
+<div class="jumbotron">
 <div class="container">
-    <h3 class="text-center py-3 pl-4 pr-5">  Reserved Flights </h3>
+    <h3 class="text-center py-3 pl-4 pr-5">Reserved Flights </h3>
 
     <div align="center">
         <table class="table table-borderless table-hover shadow mb-4 bg-white">
@@ -51,7 +47,7 @@
         </table>
     </div>
 </div>
-
+</div>
 <div th:replace="base :: footer"></div>
 
 </body>
