--- a/src/main/resources/templates/bookingform.html
+++ b/src/main/resources/templates/bookingform.html
@@ -25,13 +25,10 @@
     <br/>
 </div>
 <div class="form-group" th:if=${null!=toFlight}>
-    <strong>Flight-2 </strong><br/>
+    <strong>Flight-2</strong><br/>
     <strong>Departure From: </strong> <span
         th:text="${toFlight.from.name}"></span><br/>
     <strong>Arrival To: </strong><span th:text="${toFlight.to.name}"></span><br/>
-    <!--  <strong>Departure Date: </strong><span th:text="${flight.departure}"></span><br/>
-<strong>Arrival Date: </strong><span th:text="${flight.arrival}"></span><br/> -->
-
 </div>
 
 <div class="container-fluid">
@@ -44,7 +41,7 @@
                 &nbsp;&nbsp; First_Name</label>
             <div class="col-sm-6">
                 <input type="text" class="form-control" id="firstName" name="firstName"
-                       placeholder="First Name" value="">
+                       placeholder="First Name" value="" required>
                 </strong></mark>
             </div>
         </div>
@@ -52,29 +49,28 @@
             <label for="lastName" class="col-sm-2 col-form-label"> &nbsp;&nbsp;Last_Name</label>
             <div class="col-sm-6">
                 <input type="text" class="form-control" id="lastName"
-                       placeholder="Last Name" name="lastName" value="">
-                </strong></mark>
+                       placeholder="Last Name" name="lastName" value="" required>
             </div>
         </div>
         <div class="form-group row">
             <label for="dob" class="col-sm-2 col-form-label ">&nbsp;&nbsp;Date of Birth:</label>
             <div class="col-sm-6">
                 <input type="date" class="form-control " id="dob"
-                       placeholder="Date of Birth" name="dob">
+                       placeholder="Date of Birth" name="dob" required aria-required="true">
             </div>
         </div>
         <div class="form-group row">
             <label for="email" class="col-sm-2 col-form-label col-form-label-sm">&nbsp;&nbsp;Email:</label>
             <div class="col-sm-6">
                 <input type="text" class="form-control form-control-sm" id="email"
-                       placeholder="Email" name="email">
+                       placeholder="Email" name="email" required>
             </div>
         </div>
         <div class="form-group row">
             <label for="phonenum" class="col-sm-2 col-form-label col-form-label-sm">&nbsp;&nbsp;Phone Number:</label>
             <div class="col-sm-6">
                 <input type="text" th:value="*{phonenum}" class="form-control form-control-sm" id="phonenum"
-                       placeholder="Phone number " name="phonenum">
+                       placeholder="Phone number " name="phonenum" required>
             </div>
         </div>
         <div>
