--- a/src/main/resources/templates/addFlight.html
+++ b/src/main/resources/templates/addFlight.html
@@ -85,12 +85,12 @@
             </div>
 
             <div>
-                Departure date: &nbsp;
+                Departure Time: &nbsp;
                 <input type="time" th:field="${flight.departure}" name="departure" required>
             </div>
             <br/>
             <div>
-                Return date: &nbsp;
+                Arrival Time: &nbsp;
                 <input type="time" th:field="${flight.arrival}" name="arrival" required>
             </div>
             <br/>
