--- a/src/main/resources/templates/bookingform.html
+++ b/src/main/resources/templates/bookingform.html
@@ -35,14 +35,12 @@
 
     <form action="#" th:action="@{/processbook}" th:object="${passenger}" method="post">
         <input type="hidden" th:field="*{id}">
-
         <div class="form-group row">
             <label for="firstName" class="col-sm-2 col-form-label">
                 &nbsp;&nbsp; First_Name</label>
             <div class="col-sm-6">
                 <input type="text" class="form-control" id="firstName" name="firstName"
                        placeholder="First Name" value="" required>
-                </strong></mark>
             </div>
         </div>
         <div class="form-group row">
@@ -74,7 +72,7 @@
             </div>
         </div>
         <div>
-            <input type="submit" class="btn btn-primary" value="Submit"/>
+            <input type="submit" class="btn btn-primary" value="Checkout"/>
         </div>
     </form>
 </div>
