--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -12,17 +12,10 @@
 <div class="container">
     <div class="jumbotron">
 
-        <h1> QR Generation using the FirstName and Last name of the user. </h1>
-        
-        <!--<img src="C:\Users\smewl\Desktop\QrCode\img.jpg" alt="QR image " >-->
-        <!--<img src="https://www.w3schools.com/images/picture.jpg" alt="QR image " >-->
-      <!--//  <img src="C:/Images/1.jpg" alt="Qr image">-->
-        <!--<img src="file:\C:\Users\smewl\Desktop\QrCode\img.jpg">-->
-
-        <!--<img id="RuPic" th:src="@{/Desktop/QrCode/img.jpg"}  width="150px" height="200px" >-->
+        <h1> Passenger information in Qr Code  </h1>
 
 
-
+        <img src="downloads\MyQrcode.png"  alt="QrCode ">
 
 
     </div>
