--- a/src/main/resources/templates/bookingform.html
+++ b/src/main/resources/templates/bookingform.html
@@ -7,12 +7,15 @@
 </head>
 <body>
 
+
 <div th:replace="base :: nav"></div>
 
 <div class="container bg-light">
+<div class="jumbotron">
+
     <h2>Flight Reservation Form</h2>
 
-</div>
+
 
 <div class="form-group">
     <strong>Flight-1 </strong> <br/>
@@ -75,6 +78,8 @@
             <input type="submit" class="btn btn-primary" value="Checkout"/>
         </div>
     </form>
+</div>
+</div>
 </div>
 <div th:replace="base :: footer"></div>
 
