--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -22,7 +22,7 @@
                     First Name</label>
                 <div class="col-sm-6">
                     <input type="text" class="form-control" id="firstName" name="firstName"
-                           placeholder="First Name" value="">
+                           placeholder="First Name" value="" required>
 
                     </strong></mark>
                 </div>
@@ -33,7 +33,7 @@
                 </label>
                 <div class="col-sm-6">
                     <input type="text" class="form-control" id="lastName"
-                           placeholder="Last Name" name="lastName" value="">
+                           placeholder="Last Name" name="lastName" value="" required>
 
                     </strong></mark>
                 </div>
@@ -43,7 +43,7 @@
                 <label for="email" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-6">
                     <input type="text" class="form-control" id="email"
-                           placeholder="Email" name="email" value="">
+                           placeholder="Email" name="email" value="" required>
 
                     </strong></mark>
                 </div>
@@ -53,7 +53,7 @@
                 </label>
                 <div class="col-sm-6">
                     <input type="text" class="form-control" id="phonenum"
-                           placeholder="Phone number" name="phonenum" value="">
+                           placeholder="Phone number" name="phonenum" value="" required>
 
                     </strong></mark>
                 </div>
@@ -63,7 +63,7 @@
                 </label>
                 <div class="col-sm-6">
                     <input type="date" class="form-control" id="dob"
-                           placeholder="Date of Birth" name="dob" value="">
+                           placeholder="Date of Birth" name="dob" value="" required>
 
                     </strong></mark>
                 </div>
@@ -73,7 +73,7 @@
                 </label>
                 <div class="col-sm-6">
                     <input type="text" class="form-control" id="citizenship"
-                           placeholder="Citizenship " name="citizenship" value="">
+                           placeholder="Citizenship " name="citizenship" value="" required>
 
                     </strong></mark>
                 </div>
@@ -83,7 +83,7 @@
                 </label>
                 <div class="col-sm-6">
                     <input type="text" class="form-control" id="username"
-                           placeholder="Username" name="username" value="">
+                           placeholder="Username" name="username" value="" required>
 
                     </strong></mark>
                 </div>
@@ -92,8 +92,8 @@
             <div class="form-group row">
                 <label for="password" class="col-sm-2 col-form-label">Password</label>
                 <div class="col-sm-6">
-                    <input type="text" class="form-control" id="password"
-                           placeholder="Password" name="password" value="">
+                    <input type="password" class="form-control" id="password"
+                           placeholder="Password" name="password" value="" required>
 
                     </strong></mark>
                 </div>
