--- a/src/main/resources/templates/addFlight.html
+++ b/src/main/resources/templates/addFlight.html
@@ -19,7 +19,7 @@
                 <label for="flightNumber" class="col-sm-2 col-form-label">
                     Flight Number </label>
                 <div class="col-sm-4">
-                    <input type="text"  class="form-control" id="flightNumber" name="flightNumber"
+                    <input style="background-color:lavender" type="text"  class="form-control" id="flightNumber" name="flightNumber"
                            placeholder="Flight_Number" value="" required>
 
                 </div>
@@ -27,7 +27,7 @@
 
             <div class="col-sm-4">
             From: &nbsp;
-            <select required class="form-control" th:field="*{from}">
+            <select style="background-color:lavender" required class="form-control" th:field="*{from}">
                 <option value="">Departure:</option>
                 <option th:each="airport : ${airports}" th:value="${airport.code}"
                         th:text="${airport.name}"></option>
@@ -35,7 +35,7 @@
         </div>
             <div class="col-sm-4">
                 To: &nbsp;
-                <select required class="form-control" th:field="*{to}">
+                <select style="background-color:lavender" required class="form-control" th:field="*{to}">
                     <option value="">Arrival:</option>
                     <option th:each="airport : ${airports}" th:value="${airport.code}"
                             th:text="${airport.name}"></option>
@@ -46,7 +46,7 @@
                 <label for="econnomy" class="col-sm-2 col-form-label">
                     Price Economy_Class  </label>
                 <div class="col-sm-4">
-                    <input type="number" class="form-control" id="econnomy" name="priceEconomy"
+                    <input style="background-color:lavender" type="number" class="form-control" id="econnomy" name="priceEconomy"
                            th:field="${flight.priceEconomy}"
                            placeholder="price of Economy_Class flight" value="" required>
                     </strong></mark>
@@ -56,7 +56,7 @@
                 <label for="business" class="col-sm-2 col-form-label">
                     Price Business_Class  </label>
                 <div class="col-sm-4">
-                    <input type="number" class="form-control" id="business" name="priceBusiness"
+                    <input style="background-color:lavender" type="number" class="form-control" id="business" name="priceBusiness"
                            placeholder="price of Business_Class flight"
                            th:field="${flight.priceBusiness}"value="" required>
                     </strong></mark>
@@ -66,7 +66,7 @@
                 <label for="first" class="col-sm-2 col-form-label">
                     Price First_Class  </label>
                 <div class="col-sm-4">
-                    <input type="number" class="form-control" id="first" name="priceFirstclass"
+                    <input style="background-color:lavender" type="number" class="form-control" id="first" name="priceFirstclass"
                            th:field="${flight.priceFirstclass}"
                            placeholder="price of First_Class flight" value="" required>
                     </strong></mark>
@@ -78,7 +78,7 @@
                 <label for="aircraft" class="col-sm-2 col-form-label">
                     Aircraft </label>
                 <div class="col-sm-4">
-                    <input type="text" th:field="${flight.aircraft}" class="form-control" id="aircraft" name="aircraft"
+                    <input style="background-color:lavender" type="text" th:field="${flight.aircraft}" class="form-control" id="aircraft" name="aircraft"
                            placeholder="Aircraft" value="" required>
                     </strong></mark>
                 </div>
@@ -86,12 +86,12 @@
 
             <div>
                 Departure Time: &nbsp;
-                <input type="time" th:field="${flight.departure}" name="departure" required>
+                <input style="background-color:lavender" type="time" th:field="${flight.departure}" name="departure" required>
             </div>
             <br/>
             <div>
                 Arrival Time: &nbsp;
-                <input type="time" th:field="${flight.arrival}" name="arrival" required>
+                <input style="background-color:lavender" type="time" th:field="${flight.arrival}" name="arrival" required>
             </div>
             <br/>
 
