--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -13,7 +13,7 @@
 
 
 <div class="container">
-    <div class="jumbotron">
+   <!-- <div class="jumbotron">-->
         <h3 class="text-center py-3 pl-4 pr-5 text-black">Available Flights</h3>
         <input type="hidden" th:value="${tripType}" name="tripType"> <input
             type="hidden" th:value="${numberOfPassengers}"
@@ -56,7 +56,7 @@
                 </tbody>
             </table>
         </div>
-
+    <!--</div>-->
 </div>
 <div th:replace="base :: footer"></div>
 
