--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,12 +23,12 @@
     <form th:action="@{/login}" method="post">
         <div class="form-group">
             <label for="inputPassword">User name:</label>
-            <input type="text" name="username" class="form-control" id="inputUsername" placeholder="User name">
+            <input style="background-color:lavender" type="text" name="username" class="form-control" id="inputUsername" placeholder="User name">
         </div>
 
         <div class="form-group">
             <label for="inputPassword">Password:</label>
-            <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
+            <input style="background-color:lavender" type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
         </div>
 
         <hr/>
