--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -21,7 +21,7 @@
                 <label for="firstName" class="col-sm-2 col-form-label">
                     First Name</label>
                 <div class="col-sm-6">
-                    <input type="text" class="form-control" id="firstName" name="firstName"
+                    <input style="background-color:lavender" type="text" class="form-control" id="firstName" name="firstName"
                            placeholder="First Name" value="" required>
 
                     </strong></mark>
@@ -32,7 +32,7 @@
                 <label for="lastName" class="col-sm-2 col-form-label">Last Name
                 </label>
                 <div class="col-sm-6">
-                    <input type="text" class="form-control" id="lastName"
+                    <input style="background-color:lavender" type="text" class="form-control" id="lastName"
                            placeholder="Last Name" name="lastName" value="" required>
 
                     </strong></mark>
@@ -42,7 +42,7 @@
             <div class="form-group row">
                 <label for="email" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-6">
-                    <input type="text" class="form-control" id="email"
+                    <input style="background-color:lavender" type="text" class="form-control" id="email"
                            placeholder="Email" name="email" value="" required>
 
                     </strong></mark>
@@ -52,7 +52,7 @@
                 <label for="username" class="col-sm-2 col-form-label">Phone Number
                 </label>
                 <div class="col-sm-6">
-                    <input type="text" class="form-control" id="phonenum"
+                    <input style="background-color:lavender" type="text" class="form-control" id="phonenum"
                            placeholder="Phone number" name="phonenum" value="" required>
 
                     </strong></mark>
@@ -62,7 +62,7 @@
                 <label for="username" class="col-sm-2 col-form-label">Date of Birth
                 </label>
                 <div class="col-sm-6">
-                    <input type="date" class="form-control" id="dob"
+                    <input style="background-color:lavender" type="date" class="form-control" id="dob"
                            placeholder="Date of Birth" name="dob" value="" required>
 
                     </strong></mark>
@@ -72,7 +72,7 @@
                 <label for="username" class="col-sm-2 col-form-label">Citizenship
                 </label>
                 <div class="col-sm-6">
-                    <input type="text" class="form-control" id="citizenship"
+                    <input style="background-color:lavender" type="text" class="form-control" id="citizenship"
                            placeholder="Citizenship " name="citizenship" value="" required>
 
                     </strong></mark>
@@ -82,7 +82,7 @@
                 <label for="username" class="col-sm-2 col-form-label">Username
                 </label>
                 <div class="col-sm-6">
-                    <input type="text" class="form-control" id="username"
+                    <input style="background-color:lavender" type="text" class="form-control" id="username"
                            placeholder="Username" name="username" value="" required>
 
                     </strong></mark>
@@ -92,7 +92,7 @@
             <div class="form-group row">
                 <label for="password" class="col-sm-2 col-form-label">Password</label>
                 <div class="col-sm-6">
-                    <input type="password" class="form-control" id="password"
+                    <input style="background-color:lavender" type="password" class="form-control" id="password"
                            placeholder="Password" name="password" value="" required>
 
                     </strong></mark>
